# app/Http/Controllers/Controller.php
@@ -9,29 +9,16 @@ use Illuminate\Routing\Controller as BaseController;
 
 class Controller extends BaseController
 {
-     /**
+    /**
      * @OA\Info(
      *      version="1.0.0",
-     *      title="Tumblr Api Documentation",
-     *      description="L5 Swagger OpenApi description",
-     *      @OA\Contact(
-     *          email="admin@admin.com"
-     *      ),
-     *      @OA\License(
-     *          name="Apache 2.0",
-     *          url="http://www.apache.org/licenses/LICENSE-2.0.html"
-     *      )
+     *      title="CMPLR API Documentation",
+     *      description="Welcome to the CMPLR API Documentation!"
      * )
      *
      * @OA\Server(
      *      url=L5_SWAGGER_CONST_HOST,
-     *      description="Demo API Server"
-     * )
-
-     *
-     * @OA\Tag(
-     *     name="Projects",
-     *     description="API Endpoints of Projects"
+     *      description="CMPLR API Server"
      * )
      */
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
